<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/weather_right_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_right_max_template"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/weather_right_divider"/>
    <View
        android:id="@+id/weather_right_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/weather_right_pressure_text"
        app:layout_constraintTop_toBottomOf="@id/weather_right_max_value"/>

    <TextView
        android:id="@+id/weather_right_pressure_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_right_pressure_title"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_right_divider"
        app:layout_constraintBottom_toTopOf="@id/weather_right_pressure_value"/>
    <TextView
        android:id="@+id/weather_right_pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_right_pressure_template"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_right_pressure_text"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>