<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WeatherFragment">


    <ImageView
        android:id="@+id/weather_info_bg"
        android:layout_width="@dimen/weather_center_info_size"
        android:layout_height="@dimen/weather_center_info_size"
        android:src="@drawable/weather_center_main_bg"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_east"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_west"
        android:textColor="@color/white"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_south"
        android:textColor="@color/white"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_north"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"/>
    <ImageView
        android:id="@+id/weather_status"
        android:layout_width="@dimen/weather_inner_cloud_status_size"
        android:layout_height="@dimen/weather_inner_cloud_status_size"
        android:src="@drawable/launcher_icon"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"/>
    <com.example.weatherforecast.views.WeatherTopView
        android:id="@+id/weather_top_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/weather_center_info_padding"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"/>
    <com.example.weatherforecast.views.WeatherLeftView
        android:id="@+id/weather_left_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/weather_center_info_padding"
        android:layout_marginStart="@dimen/weather_center_info_padding"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"/>
    <com.example.weatherforecast.views.WeatherRightView
        android:id="@+id/weather_right_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/weather_center_info_padding"
        android:layout_marginEnd="@dimen/weather_center_info_padding"
        app:layout_constraintTop_toTopOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"/>
    <com.example.weatherforecast.views.WeatherBottomView
        android:id="@+id/weather_bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/weather_center_info_padding"
        app:layout_constraintBottom_toBottomOf="@id/weather_info_bg"
        app:layout_constraintStart_toStartOf="@id/weather_info_bg"
        app:layout_constraintEnd_toEndOf="@id/weather_info_bg"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black54"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/weather_forecast_pager"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/weather_forecast_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toolbar_default_height"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>